--- a/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/base.html
+++ b/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/base.html
@@ -119,7 +119,7 @@
     {% endwith %}
 
     {% block scripts %}{% endblock %}
-    <script>
+<!--     <script>
   // Disable right-click
   document.addEventListener('contextmenu', event => event.preventDefault());
 
@@ -132,7 +132,7 @@
       e.preventDefault();
     }
   });
-</script>
+</script> -->
 
 </body>
 </html> 
