--- a/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/admin_dashboard.html
+++ b/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/admin_dashboard.html
@@ -49,7 +49,7 @@
     <svg class="h-5 w-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 20h9"></path>
     </svg>
-    Privacy Policy
+    About us
 </a>
 
 <a href="{{ url_for('terms_conditions') }}" class="flex items-center px-4 py-3 text-gray-300 hover:text-white hover:bg-white hover:bg-opacity-10 rounded-lg transition duration-150">
