--- a/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/student_dashboard.html
+++ b/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/student_dashboard.html
@@ -36,7 +36,7 @@
                     <svg class="h-5 w-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
                     </svg>
-                    All Tests
+                    All Tests@499
                 </a>
                 
                 <a href="{{ url_for('student_scores') }}" class="flex items-center px-4 py-3 text-gray-300 hover:text-white hover:bg-white hover:bg-opacity-10 rounded-lg transition duration-150">
