--- a/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/student_dashboard.html
+++ b/Online-Examination-System-with-Timer-and-Leaderboard-main/templates/student_dashboard.html
@@ -65,10 +65,11 @@
 
 <a href="{{ url_for('terms_conditions') }}" class="flex items-center px-4 py-3 text-gray-300 hover:text-white hover:bg-white hover:bg-opacity-10 rounded-lg transition duration-150">
     <svg class="h-5 w-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6M9 16h6M5 8h14M5 4h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2z" />
     </svg>
     Terms & Conditions
 </a>
+
             </nav>
         </div>
         
